syntax = "proto3";

package order;

// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./order";

message OrderReq {
  string ip = 1;
  string symbol = 2;
  int64 page = 4;
  int64 pageSize = 5;
  int64 userId = 6;
}

message OrderRes {
  repeated ExchangeOrder list = 1;
  int64 total = 2;
}


message ExchangeOrder{
  int64 id  = 1;
  string orderId  = 2;
  double amount  = 3;
  string baseSymbol  = 4;
  int64 canceledTime  = 5;
  string coinSymbol  = 6;
  int64 completedTime  = 7;
  string direction  = 8;
  int64 memberId  = 11;
  double price  = 12;
  string status  = 13;
  string symbol  = 14;
  int64 time  = 15;
  double tradedAmount  = 16;
  double turnover  = 17;
  string type  = 18;
  string useDiscount  = 21;
}

service Order {
  rpc FindOrderHistory(OrderReq) returns(OrderRes);
  rpc FindOrderCurrent(OrderReq) returns(OrderRes);
}